<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_setting_change_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:paddingStart="24dp"
            android:paddingLeft="24dp"
            android:text="@string/change_password"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tv_setting_update_restaurant_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:paddingStart="24dp"
            android:paddingLeft="24dp"
            android:text="@string/update_restaurant_info"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_setting_change_password"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tv_setting_unregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/unregister_restaurant"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>