<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.dsm.setting.viewModel.PasswordChangeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_original_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintLeft_toLeftOf="@id/gl_left"
            app:layout_constraintRight_toRightOf="@id/gl_right"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/original_password"
                android:text="@={viewModel.originalPassword}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_new_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="@id/gl_left"
            app:layout_constraintRight_toRightOf="@id/gl_right"
            app:layout_constraintTop_toBottomOf="@id/til_original_password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/new_password"
                android:text="@={viewModel.newPassword}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_new_password_retype"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="@id/gl_left"
            app:layout_constraintRight_toRightOf="@id/gl_right"
            app:layout_constraintTop_toBottomOf="@id/til_new_password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/new_password_retype"
                android:text="@={viewModel.newPasswordRetype}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.dsm.androidcomponent.view.EnableButton
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginBottom="24dp"
            android:onClick="@{() -> viewModel.onClickChangePassword()}"
            android:text="@string/change_password"
            android:textSize="18sp"
            android:textStyle="bold"
            app:enable="@{viewModel.isChangePasswordEnable}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/gl_left"
            app:layout_constraintRight_toRightOf="@id/gl_right"
            app:layout_constraintTop_toBottomOf="@id/til_new_password_retype"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="60dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="60dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>