<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.dsm.setting.viewModel.AddressChangeViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
        animChangeAddress="@{viewModel.newAddress}"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/motion_change_address">

        <com.dsm.androidcomponent.view.DefaultToolbar
            android:id="@+id/tb_address_change"
            android:layout_width="0dp"
            android:layout_height="?actionBarSize"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/change_address" />

        <TextView
            android:id="@+id/tv_current_address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/current_address"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb_address_change" />

        <TextView
            android:id="@+id/tv_current_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@{viewModel.currentAddress.address}"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@id/tv_current_address_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_current_address_label" />

        <TextView
            android:id="@+id/tv_current_road_address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/road_address"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@id/tv_current_address"
            app:layout_constraintTop_toBottomOf="@id/tv_current_address" />

        <TextView
            android:id="@+id/tv_colon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:text="@string/colon"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_current_road_address_label"
            app:layout_constraintLeft_toRightOf="@id/tv_current_road_address_label"
            app:layout_constraintTop_toTopOf="@id/tv_current_road_address_label" />

        <TextView
            android:id="@+id/tv_current_road_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:text="@{viewModel.currentAddress.roadAddress}"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toRightOf="@id/tv_colon"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_colon" />

        <TextView
            android:id="@+id/tv_new_address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:alpha="0"
            android:text="@string/new_address"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/tv_current_address_label"
            app:layout_constraintTop_toBottomOf="@id/tv_current_road_address" />

        <TextView
            android:id="@+id/tv_new_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:alpha="0"
            android:text="@{viewModel.newAddress.address}"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@id/tv_new_address_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_new_address_label" />

        <TextView
            android:id="@+id/tv_new_road_address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:alpha="0"
            android:text="@string/road_address"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@id/tv_new_address_label"
            app:layout_constraintTop_toBottomOf="@id/tv_new_address" />

        <TextView
            android:id="@+id/tv_new_road_address_colon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:alpha="0"
            android:text="@string/colon"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_new_road_address_label"
            app:layout_constraintLeft_toRightOf="@id/tv_new_road_address_label"
            app:layout_constraintTop_toTopOf="@id/tv_new_road_address_label" />

        <TextView
            android:id="@+id/tv_new_road_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:alpha="0"
            android:text="@{viewModel.newAddress.roadAddress}"
            app:layout_constraintLeft_toRightOf="@id/tv_new_road_address_colon"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_new_road_address_colon" />

        <Button
            android:id="@+id/btn_search_new_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_button_primary_light"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:text="@string/search_new_address"
            android:textColor="@color/colorPrimaryLight"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_current_road_address" />

        <com.dsm.androidcomponent.view.EnableButton
            android:id="@+id/btn_change_address"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="24dp"
            android:onClick="@{() -> viewModel.onClickChangeAddress()}"
            android:text="@string/change_address"
            android:textSize="18sp"
            android:textStyle="bold"
            app:enable="@{viewModel.isChangeAddressEnable}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>